# Computing-Practicum

./: .gitignore  CMakeLists.txt  README.md
computing-practicum/: CMakeLists.txt
computing-practicum/05-06/: CMakeLists.txt  root.hpp  section-05-06-problem-01.cpp  section-05-06-problem-02.cpp  section-05-06-problem-03.cpp  section-05-06-problem-04.cpp  section-05-06-problem-05.cpp  section-05-06-problem-06.cpp
computing-practicum/05-6/: CMakeLists.txt
computing-practicum/07-06/: CMakeLists.txt  integrate.hpp  section-07-06-problem-01.cpp  section-07-06-problem-02.cpp  section-07-06-problem-03.cpp  section-07-06-problem-04.cpp  section-07-06-problem-05.cpp  section-07-06-problem-06.cpp
computing-practicum/08-01/: CMakeLists.txt  gauss-legendre.hpp  section-08-01-problem-01.cpp
