add_executable(
    section-05-06-problem-01
    section-05-06-problem-01.cpp
)

add_executable(
    section-05-06-problem-02
    section-05-06-problem-02.cpp
)

add_executable(
    section-05-06-problem-03
    section-05-06-problem-03.cpp
)

add_executable(
    section-05-06-problem-04
    section-05-06-problem-04.cpp
)

add_executable(
    section-05-06-problem-05
    section-05-06-problem-05.cpp
)

add_executable(
    section-05-06-problem-06
    section-05-06-problem-06.cpp
)